<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_Kardex_Fanuc_Input" Id="{412f3016-1114-489d-867f-5d5d181876c4}">
    <Declaration><![CDATA[TYPE U_Kardex_Fanuc_Input :
UNION
	aStdIn		AT %I*		:ARRAY [1..32] OF UINT;
	Status					:ST_Kardex_Robot_Status;	
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>